<resources>

    <string-array name="dateRange">
        <item>Today</item>
        <item>This week</item>
        <item>This month</item>
        <item>All time</item>
    </string-array>


    <string-array name="tags_expenses">
        <item>Transport</item>
        <item>Food</item>
        <item>Utilities</item>
        <item>Insurance</item>
        <item>Housing</item>
        <item>Education</item>
    </string-array>

    <string-array name="currency">
        <item>USD</item>
        <item>EUR</item>
        <item>BYN</item>
        <item>RUB</item>
        <item>PL</item>
    </string-array>
    <string name="add_expense">Add expense</string>
    <string name="you_spent">You spent</string>
    <string name="text_month">MAY</string>
    <string name="day_number">29</string>
    <string name="title_hint">Title</string>
    <string name="select_tags">Select tags</string>
    <string name="notes_hint">Notes</string>
    <string name="no_tags">No tags</string>
    <string name="notes_title">Notes</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="delete_all_expenses">Delete all expenses</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="search_currency">Search currency</string>
    <string name="amount">Amount</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="add_tag">ADD TAG</string>
    <string name="close">close</string>
    <string name="tag">Tag</string>
    <string name="tag_hint">Tag</string>
    <string name="success_expense_saved">Success expense saved</string>
    <string name="success_expense_update">Success expense update</string>
    <string name="success_expense_delete">Success expense delete</string>
    <string name="error">Error forever</string>
    <string name="settings">settings</string>
    <string name="notification">notification</string>
    <string name="amountT">Amount:</string>
    <string name="delete_expense_message">Are you sure you want to delete expense?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_expenses">No expenses</string>

    <!-- Shared Preferences -->
    <string name="key_date_range" translatable="false">date_range</string>
    <string name="hint_name">Name</string>
    <string name="hind_symbol">Symbol</string>
    <string name="text_hint">Text</string>
    <string name="notification2">Notification</string>
    <string name="app_name">Budget</string>

</resources>